# otus-cpp-templates-magic-assignment

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classconanfile_1_1_sfinae_conan-members.html  classconanfile_1_1_sfinae_conan.html  classconanfile_1_1_sfinae_conan__coll__graph.map  classconanfile_1_1_sfinae_conan__inherit__graph.md5  classes.html  conanfile.py  examples.html  files.html  files_dup.js  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  ip__print_8h.html  ip__print_8h.js  ip__print_8h__dep__incl.map  ip__print_8h__dep__incl.md5  ip__print_8h__incl.map  ip__print_8h__incl.md5  ip__print_8h_source.html  ip_print.h  main_8cpp-example.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md__r_e_a_d_m_e.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
docs/: index.md
include/: ip_print.h
search/: all_0.js  all_1.js  functions_0.js  searchdata.js
src/: main.cpp
tests/: CMakeLists.txt  test_containers.cpp  test_integral.cpp  test_string.cpp  test_tuple.cpp
